fixed alignment and colouring - text on forms still needs changed

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -29,14 +29,14 @@ p {
 #formContent {
   -webkit-border-radius: 10px 10px 10px 10px;
   border-radius: 10px 10px 10px 10px;
-  background: #fff;
+  background: #022B4C;
   padding: 30px;
   width: 90%;
   max-width: 450px;
   position: relative;
   padding: 0px;
-  -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
-  box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+  -webkit-box-shadow: 0 30px 60px 0 #022B4C ;
+  box-shadow: 0 30px 60px 0 #022B4C ;
   text-align: center;
 }
 
